force-app/main/default/objects/JiraStatusMapping__c/JiraStatusMapping__c.object-meta.xml
<CustomObject>
    <label>Jira Status Mapping</label>
    <nameField>
        <displayFormat>JSM-{000000}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jira Status Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>