force-app/main/default/objects/JiraStatusMapping__c/fields/CopadoStatus__c.field-meta.xml
<CustomField>
    <fullName>CopadoStatus__c</fullName>
    <description>Copado User Story Status</description>
    <inlineHelpText>Copado User Story Status</inlineHelpText>
    <label>Copado Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Story_Status</valueSetName>
    </valueSet>
</CustomField>