force-app/main/default/objects/JiraStatusMapping__c/fields/ExternalValue__c.field-meta.xml
<CustomField>
    <fullName>ExternalValue__c</fullName>
    <description>Value from the external external system</description>
    <inlineHelpText>Value from the external external system</inlineHelpText>
    <label>External Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>