force-app/main/default/objects/JiraStatusMapping__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Project associated with the mapping record</description>
    <inlineHelpText>Project associated with the mapping record</inlineHelpText>
    <label>Project</label>
    <referenceTo>copado__Project__c</referenceTo>
    <relationshipLabel>Jira Status Mappings</relationshipLabel>
    <relationshipName>JiraStatusMappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>