force-app/main/default/objects/JiraStatusMapping__c/fields/SyncDirection__c.field-meta.xml
<CustomField>
    <fullName>SyncDirection__c</fullName>
    <description>Identifies if the record is to be used for inbound synchronizations (External Sync Button), outbound synchronizations or ignored</description>
    <inlineHelpText>Identifies if the record is to be used for inbound synchronizations (External Sync Button), outbound synchronizations or ignored</inlineHelpText>
    <label>Sync Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>